--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -321,7 +321,8 @@ build.json @home-assistant/supervisor
 /tests/components/ecoforest/ @pjanuario
 /homeassistant/components/econet/ @w1ll1am23
 /tests/components/econet/ @w1ll1am23
-/homeassistant/components/ecovacs/ @OverloadUT @mib1185
+/homeassistant/components/ecovacs/ @OverloadUT @mib1185 @edenhaus
+/tests/components/ecovacs/ @OverloadUT @mib1185 @edenhaus
 /homeassistant/components/ecowitt/ @pvizeli
 /tests/components/ecowitt/ @pvizeli
 /homeassistant/components/efergy/ @tkdrob
