--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -954,6 +954,9 @@ gotailwind==0.2.2
 # homeassistant.components.govee_ble
 govee-ble==0.27.3
 
+# homeassistant.components.govee_light_local
+govee-local-api==1.4.1
+
 # homeassistant.components.remote_rpi_gpio
 gpiozero==1.6.2
 
