--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -771,6 +771,9 @@ gotailwind==0.2.2
 # homeassistant.components.govee_ble
 govee-ble==0.27.3
 
+# homeassistant.components.govee_light_local
+govee-local-api==1.4.1
+
 # homeassistant.components.gree
 greeclimate==1.4.1
 
