--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -251,6 +251,9 @@ aiohue==4.7.0
 # homeassistant.components.imap
 aioimaplib==1.0.1
 
+# homeassistant.components.apache_kafka
+aiokafka==0.10.0
+
 # homeassistant.components.lifx
 aiolifx-effects==0.3.2
 
