--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -1725,6 +1725,9 @@ python-songpal==0.16
 # homeassistant.components.tado
 python-tado==0.17.3
 
+# homeassistant.components.technove
+python-technove==1.1.1
+
 # homeassistant.components.telegram_bot
 python-telegram-bot==13.1
 
