--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -597,14 +597,14 @@ jobs:
         run: |
           . venv/bin/activate
           python --version
-          pylint --ignore-missing-annotations=y homeassistant --exit-zero --fail-on=W,E,F
+          pylint --ignore-missing-annotations=y --ignore-wrong-coordinator-module=y homeassistant
       - name: Run pylint (partially)
         if: needs.info.outputs.test_full_suite == 'false'
         shell: bash
         run: |
           . venv/bin/activate
           python --version
-          pylint --ignore-missing-annotations=y --exit-zero --fail-on=W,E,F homeassistant/components/${{ needs.info.outputs.integrations_glob }}
+          pylint --ignore-missing-annotations=y --ignore-wrong-coordinator-module=y homeassistant/components/${{ needs.info.outputs.integrations_glob }}
 
   mypy:
     name: Check mypy
