Rename to Home Assistant Analytics Insights

--- a/homeassistant/components/analytics_insights/manifest.json
+++ b/homeassistant/components/analytics_insights/manifest.json
@@ -1,9 +1,9 @@
 {
-  "domain": "homeassistant_analytics_consumer",
-  "name": "Home Assistant analytics sensor",
+  "domain": "analytics_insights",
+  "name": "Home Assistant Analytics Insights",
   "codeowners": ["@joostlek"],
   "config_flow": true,
-  "documentation": "https://www.home-assistant.io/integrations/homeassistant_analytics_consumer",
+  "documentation": "https://www.home-assistant.io/integrations/analytics_insights",
   "integration_type": "service",
   "iot_class": "cloud_polling",
   "loggers": ["python-homeassistant-analytics"],
