--- a/mypy.ini
+++ b/mypy.ini
@@ -450,6 +450,16 @@ disallow_untyped_defs = true
 warn_return_any = true
 warn_unreachable = true
 
+[mypy-homeassistant.components.analytics_insights.*]
+check_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+disallow_untyped_defs = true
+warn_return_any = true
+warn_unreachable = true
+
 [mypy-homeassistant.components.android_ip_webcam.*]
 check_untyped_defs = true
 disallow_incomplete_defs = true
@@ -1772,16 +1782,6 @@ warn_return_any = true
 warn_unreachable = true
 
 [mypy-homeassistant.components.homeassistant_alerts.*]
-check_untyped_defs = true
-disallow_incomplete_defs = true
-disallow_subclassing_any = true
-disallow_untyped_calls = true
-disallow_untyped_decorators = true
-disallow_untyped_defs = true
-warn_return_any = true
-warn_unreachable = true
-
-[mypy-homeassistant.components.homeassistant_analytics_consumer.*]
 check_untyped_defs = true
 disallow_incomplete_defs = true
 disallow_subclassing_any = true
