--- a/homeassistant/components/thermopro/manifest.json
+++ b/homeassistant/components/thermopro/manifest.json
@@ -9,6 +9,10 @@
     {
       "local_name": "TP39*",
       "connectable": false
+    },
+    {
+      "local_name": "TP96*",
+      "connectable": false
     }
   ],
   "codeowners": ["@bdraco"],
@@ -16,5 +20,5 @@
   "dependencies": ["bluetooth_adapters"],
   "documentation": "https://www.home-assistant.io/integrations/thermopro",
   "iot_class": "local_push",
-  "requirements": ["thermopro-ble==0.5.0"]
+  "requirements": ["thermopro-ble==0.6.0"]
 }
