--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -2213,7 +2213,7 @@ python-join-api==0.0.9
 python-juicenet==1.1.0
 
 # homeassistant.components.tplink
-python-kasa[speedups]==0.6.0.dev3
+python-kasa[speedups]==0.6.0
 
 # homeassistant.components.lirc
 # python-lirc==1.2.3
