--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -2490,6 +2490,9 @@ sharp_aquos_rc==0.3.2
 # homeassistant.components.shodan
 shodan==1.28.0
 
+# homeassistant.components.simplefin
+simplefin4py==0.0.5
+
 # homeassistant.components.sighthound
 simplehound==0.3
 
