--- a/mypy.ini
+++ b/mypy.ini
@@ -540,6 +540,17 @@ disallow_untyped_defs = true
 warn_return_any = true
 warn_unreachable = true
 
+[mypy-homeassistant.components.application_credentials.*]
+check_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+disallow_untyped_defs = true
+warn_return_any = true
+warn_unreachable = true
+no_implicit_reexport = true
+
 [mypy-homeassistant.components.apprise.*]
 check_untyped_defs = true
 disallow_incomplete_defs = true
@@ -4492,9 +4503,6 @@ disallow_untyped_decorators = true
 disallow_untyped_defs = true
 warn_return_any = true
 warn_unreachable = true
-
-[mypy-homeassistant.components.application_credentials.*]
-no_implicit_reexport = true
 
 [mypy-homeassistant.components.spotify.*]
 no_implicit_reexport = true
