--- a/homeassistant/components/ecovacs/manifest.json
+++ b/homeassistant/components/ecovacs/manifest.json
@@ -5,6 +5,6 @@
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/ecovacs",
   "iot_class": "cloud_push",
-  "loggers": ["sleekxmppfs", "sucks"],
-  "requirements": ["py-sucks==0.9.8"]
+  "loggers": ["sleekxmppfs", "sucks", "deebot_client"],
+  "requirements": ["py-sucks==0.9.8", "deebot-client==4.3.0"]
 }
