--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -27,17 +27,6 @@ HAP-python==4.9.1
 # homeassistant.components.tasmota
 HATasmota==0.8.0
 
-# homeassistant.components.doods
-# homeassistant.components.generic
-# homeassistant.components.image_upload
-# homeassistant.components.matrix
-# homeassistant.components.proxy
-# homeassistant.components.qrcode
-# homeassistant.components.seven_segments
-# homeassistant.components.sighthound
-# homeassistant.components.tensorflow
-Pillow==10.1.0
-
 # homeassistant.components.plex
 PlexAPI==4.15.7
 
@@ -1165,6 +1154,17 @@ phone-modem==0.1.1
 
 # homeassistant.components.pilight
 pilight==0.1.1
+
+# homeassistant.components.doods
+# homeassistant.components.generic
+# homeassistant.components.image_upload
+# homeassistant.components.matrix
+# homeassistant.components.proxy
+# homeassistant.components.qrcode
+# homeassistant.components.seven_segments
+# homeassistant.components.sighthound
+# homeassistant.components.tensorflow
+pillow==10.2.0
 
 # homeassistant.components.plex
 plexauth==0.0.6
