--- a/homeassistant/components/lidarr/manifest.json
+++ b/homeassistant/components/lidarr/manifest.json
@@ -7,5 +7,6 @@
   "integration_type": "service",
   "iot_class": "local_polling",
   "loggers": ["aiopyarr"],
-  "requirements": ["aiopyarr==23.4.0"]
+  "requirements": ["aiopyarr==23.4.0"],
+  "version": "1.0.1"
 }
