--- a/homeassistant/components/leaone/manifest.json
+++ b/homeassistant/components/leaone/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "leaone",
-  "name": "Leaone",
+  "name": "LeaOne",
   "codeowners": ["@bdraco"],
   "config_flow": true,
   "dependencies": ["bluetooth_adapters"],
