--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -41,7 +41,7 @@ types-caldav==1.3.0.20240106
 types-chardet==0.1.5
 types-decorator==5.1.8.20240106
 types-paho-mqtt==1.6.0.20240106
-types-Pillow==10.1.0.20240106
+types-pillow==10.2.0.20240111
 types-protobuf==4.24.0.20240106
 types-psutil==5.9.5.20240106
 types-python-dateutil==2.8.19.20240106
