--- a/homeassistant/components/torque/manifest.json
+++ b/homeassistant/components/torque/manifest.json
@@ -1,8 +1,10 @@
 {
   "domain": "torque",
   "name": "Torque",
-  "codeowners": [],
-  "dependencies": ["http"],
   "documentation": "https://www.home-assistant.io/integrations/torque",
-  "iot_class": "local_push"
+  "dependencies": ["http"],
+  "codeowners": [],
+  "iot_class": "local_push",
+  "version": "0.0.2",
+  "config_flow": true
 }
