--- a/homeassistant/components/time_date/manifest.json
+++ b/homeassistant/components/time_date/manifest.json
@@ -4,7 +4,7 @@
   "codeowners": ["@fabaff"],
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/time_date",
-  "integration_type": "helper",
+  "integration_type": "service",
   "iot_class": "local_push",
   "quality_scale": "internal"
 }
