--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1278,6 +1278,9 @@ mficlient==0.3.0
 # homeassistant.components.xiaomi_miio
 micloud==0.5
 
+# homeassistant.components.microbees
+microBeesPy==0.1.7
+
 # homeassistant.components.mill
 mill-local==0.3.0
 
