--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -2197,6 +2197,9 @@ python-gc100==1.0.3a0
 # homeassistant.components.gitlab_ci
 python-gitlab==1.6.0
 
+# homeassistant.components.analytics_insights
+python-homeassistant-analytics==0.5.0
+
 # homeassistant.components.homewizard
 python-homewizard-energy==4.1.0
 
