--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -1673,6 +1673,9 @@ python-ecobee-api==0.2.17
 # homeassistant.components.fully_kiosk
 python-fullykiosk==0.0.12
 
+# homeassistant.components.analytics_insights
+python-homeassistant-analytics==0.5.0
+
 # homeassistant.components.homewizard
 python-homewizard-energy==4.1.0
 
