--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -415,6 +415,9 @@ airthings-cloud==0.2.0
 # homeassistant.components.airtouch4
 airtouch4pyapi==1.0.5
 
+# homeassistant.components.airtouch5
+airtouch5py==0.2.8
+
 # homeassistant.components.alpha_vantage
 alpha-vantage==2.3.1
 
