--- a/homeassistant/components/climate/services.yaml
+++ b/homeassistant/components/climate/services.yaml
@@ -139,6 +139,8 @@ turn_on:
   target:
     entity:
       domain: climate
+      supported_features:
+        - climate.ClimateEntityFeature.TURN_ON
 
 turn_off:
   target:
