Add LeaOne integration (#108617)

--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1183,6 +1183,9 @@ laundrify-aio==1.1.2
 # homeassistant.components.ld2410_ble
 ld2410-ble==0.1.1
 
+# homeassistant.components.leaone
+leaone-ble==0.1.0
+
 # homeassistant.components.led_ble
 led-ble==1.0.1
 
