--- a/homeassistant/components/microbees/manifest.json
+++ b/homeassistant/components/microbees/manifest.json
@@ -7,7 +7,7 @@
   "documentation": "https://www.home-assistant.io/integrations/microbees",
   "homekit": {},
   "iot_class": "cloud_polling",
-  "requirements": ["microBeesPy==0.1.7"],
+  "requirements": ["microBeesPy==0.1.7", "aiohttp==3.9.1"],
   "ssdp": [],
   "zeroconf": []
 }
