--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -1036,6 +1036,9 @@ motionblinds==0.6.19
 # homeassistant.components.motioneye
 motioneye-client==0.3.14
 
+# homeassistant.components.bang_olufsen
+mozart-api==3.2.1.150.6
+
 # homeassistant.components.mullvad
 mullvad-api==1.0.0
 
