--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1351,8 +1351,8 @@ build.json @home-assistant/supervisor
 /homeassistant/components/tfiac/ @fredrike @mellado
 /homeassistant/components/thermobeacon/ @bdraco
 /tests/components/thermobeacon/ @bdraco
-/homeassistant/components/thermopro/ @bdraco
-/tests/components/thermopro/ @bdraco
+/homeassistant/components/thermopro/ @bdraco @h3ss
+/tests/components/thermopro/ @bdraco @h3ss
 /homeassistant/components/thethingsnetwork/ @fabaff
 /homeassistant/components/thread/ @home-assistant/core
 /tests/components/thread/ @home-assistant/core
