--- a/homeassistant/components/thermopro/manifest.json
+++ b/homeassistant/components/thermopro/manifest.json
@@ -15,7 +15,7 @@
       "connectable": false
     }
   ],
-  "codeowners": ["@bdraco"],
+  "codeowners": ["@bdraco", "@h3ss"],
   "config_flow": true,
   "dependencies": ["bluetooth_adapters"],
   "documentation": "https://www.home-assistant.io/integrations/thermopro",
