--- a/homeassistant/components/teslemetry/manifest.json
+++ b/homeassistant/components/teslemetry/manifest.json
@@ -5,6 +5,6 @@
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/teslemetry",
   "iot_class": "cloud_polling",
-  "loggers": ["teslemetry"],
+  "loggers": ["tesla-fleet-api"],
   "requirements": ["tesla-fleet-api==0.2.0"]
 }
