--- a/.coveragerc
+++ b/.coveragerc
@@ -1362,6 +1362,11 @@ omit =
     homeassistant/components/telnet/switch.py
     homeassistant/components/temper/sensor.py
     homeassistant/components/tensorflow/image_processing.py
+    homeassistant/components/teslemetry/__init__.py
+    homeassistant/components/teslemetry/climate.py
+    homeassistant/components/teslemetry/coordinator.py
+    homeassistant/components/teslemetry/entity.py
+    homeassistant/components/teslemetry/context.py
     homeassistant/components/tfiac/climate.py
     homeassistant/components/thermoworks_smoke/sensor.py
     homeassistant/components/thethingsnetwork/*
