--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1344,6 +1344,8 @@ build.json @home-assistant/supervisor
 /tests/components/template/ @PhracturedBlue @tetienne @home-assistant/core
 /homeassistant/components/tesla_wall_connector/ @einarhauks
 /tests/components/tesla_wall_connector/ @einarhauks
+/homeassistant/components/teslemetry/ @Bre77
+/tests/components/teslemetry/ @Bre77
 /homeassistant/components/tessie/ @Bre77
 /tests/components/tessie/ @Bre77
 /homeassistant/components/text/ @home-assistant/core
