Rework package merge validation
Ignore invalid package definitions instead of failing startup.
Output error messages with locations if possible when a package
definition has errors.

--- a/tests/fixtures/core/config/package_schema_validation/packages_slug/configuration.yaml
+++ b/tests/fixtures/core/config/package_schema_validation/packages_slug/configuration.yaml
@@ -3,3 +3,5 @@ homeassistant:
     this is not a slug but it should be one:
       switch:
         - platform: template
+    this_works:
+      iot_domain: [{"some": "yay"}]
