--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -979,6 +979,9 @@ loqedAPI==2.1.8
 # homeassistant.components.luftdaten
 luftdaten==0.7.4
 
+# homeassistant.components.lupusec
+lupupy==0.3.2
+
 # homeassistant.components.scrape
 lxml==5.1.0
 
