--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -349,6 +349,9 @@ aioswitcher==3.4.1
 # homeassistant.components.syncthing
 aiosyncthing==0.5.1
 
+# homeassistant.components.tankerkoenig
+aiotankerkoenig==0.2.0
+
 # homeassistant.components.tractive
 aiotractive==0.5.6
 
@@ -1661,9 +1664,6 @@ pysuez==0.2.0
 
 # homeassistant.components.switchbee
 pyswitchbee==1.8.0
-
-# homeassistant.components.tankerkoenig
-pytankerkoenig==0.0.6
 
 # homeassistant.components.tautulli
 pytautulli==23.1.1
