--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -157,8 +157,8 @@ build.json @home-assistant/supervisor
 /homeassistant/components/binary_sensor/ @home-assistant/core
 /tests/components/binary_sensor/ @home-assistant/core
 /homeassistant/components/bizkaibus/ @UgaitzEtxebarria
-/homeassistant/components/blebox/ @bbx-a @riokuu
-/tests/components/blebox/ @bbx-a @riokuu
+/homeassistant/components/blebox/ @bbx-a @riokuu @swistakm
+/tests/components/blebox/ @bbx-a @riokuu @swistakm
 /homeassistant/components/blink/ @fronzbot @mkmer
 /tests/components/blink/ @fronzbot @mkmer
 /homeassistant/components/blue_current/ @Floris272 @gleeuwen
