--- a/homeassistant/components/heatmiser/manifest.json
+++ b/homeassistant/components/heatmiser/manifest.json
@@ -4,6 +4,6 @@
   "codeowners": ["@andylockran"],
   "documentation": "https://www.home-assistant.io/integrations/heatmiser",
   "iot_class": "local_polling",
-  "loggers": ["heatmiserV3"],
-  "requirements": ["heatmiserV3==1.1.18"]
+  "loggers": ["heatmiserv3"],
+  "requirements": ["heatmiserv3==2.0.1"]
 }
