--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -184,6 +184,9 @@ aioaseko==0.0.2
 # homeassistant.components.asuswrt
 aioasuswrt==1.4.0
 
+# homeassistant.components.husqvarna_automower
+aioautomower==2024.1.5
+
 # homeassistant.components.azure_devops
 aioazuredevops==1.3.5
 
