--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
       - id: ruff
         args:
           - --fix
+          - --exclude=**/virtual
   - repo: https://github.com/psf/black-pre-commit-mirror
     rev: 23.9.1
     hooks:
