--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,6 +84,7 @@ py-version = "3.11"
 ignore = [
     "tests",
 ]
+ignore-paths = '^homeassistant/components/virtual/.*$'
 # Use a conservative default here; 2 should speed up most setups and not hurt
 # any too bad. Override on command line as appropriate.
 jobs = 2
