--- a/homeassistant/components/microbees/manifest.json
+++ b/homeassistant/components/microbees/manifest.json
@@ -5,9 +5,6 @@
   "config_flow": true,
   "dependencies": ["application_credentials"],
   "documentation": "https://www.home-assistant.io/integrations/microbees",
-  "homekit": {},
   "iot_class": "cloud_polling",
-  "requirements": ["microBeesPy==0.1.9", "aiohttp==3.9.1"],
-  "ssdp": [],
-  "zeroconf": []
+  "requirements": ["microBeesPy==0.1.9"]
 }
