Add romy vacuum integration (#93750)
Co-authored-by: Erik Montnemery <erik@montnemery.com>
Co-authored-by: Robert Resch <robert@resch.dev>
Co-authored-by: Allen Porter <allen.porter@gmail.com>

--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -2439,6 +2439,9 @@ rocketchat-API==0.6.1
 # homeassistant.components.roku
 rokuecp==0.18.1
 
+# homeassistant.components.romy
+romy==0.0.7
+
 # homeassistant.components.roomba
 roombapy==1.6.10
 
