--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -1858,6 +1858,9 @@ ring-doorbell[listen]==0.8.5
 # homeassistant.components.roku
 rokuecp==0.18.1
 
+# homeassistant.components.romy
+romy==0.0.7
+
 # homeassistant.components.roomba
 roombapy==1.6.10
 
